--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,3 +1,30 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 75%;
+}
+
+main h1{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: inherit;
+}
+
+.herencia h6{
+    
+    font-size: inherit;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+body {
+    width: 100%;
+    padding: 20px 50px;
+    border: 10px solid yellow;
+}
+
 .main-nav {
     background-color: aquamarine;
     margin-top: 10px;
